--- a/vw_test.html
+++ b/vw_test.html
@@ -74,9 +74,15 @@
         });
       });
     </script>
+    <script>
+     /**
+     *** song_de ***
+     *** xuesongde123456 ***
+     */
+    </script>
   </head>
   <body>
-    <page><a href="http://www.hangge.com/blog/cache/detail_2105.html">欢迎访问 hangge.com</a></page>
+    <page><a href="http://www.hangge.com/blog/cache/detail_2105.html">webpack打包优化</a></page>
     <page></page>
     <page></page>
   </body>
