--- a/vw_test_dialog.html
+++ b/vw_test_dialog.html
@@ -15,7 +15,7 @@
     <meta name="format-detection" content="telephone=no">
     <!--Safari在iPhone上自动识别任何可能是电话号码的字符串-->
     <meta http-equiv="x-dns-prefetch-control" content="on">
-    <title>hangge.com</title>
+    <title>脚步</title>
     <script type="text/javascript" src="http://libs.baidu.com/jquery/2.1.4/jquery.min.js"></script>
     <style>
       html, body, div, span, button {
